--- a/trunk/pyerp/fnd/templates/pub/index/index.html
+++ b/trunk/pyerp/fnd/templates/pub/index/index.html
@@ -8,33 +8,33 @@
   <a title="pyerp">Pyerp</a>
 </div>
 <menu compact="true">
-  <li><a href="/index.html/">首页</a></li>
-  <li><a href="/about.html/">关于</a></li>
-  <li><a href="/downloads.html/">下载</a></li>
-  <li><a href="/maillist.html/">邮件列表</a></li>
-  <li><a href="/news/">新闻动态</a></li>
+  <li><a href="/index.html/" target="_blank" title="首页">首页</a></li>
+  <li><a href="/about.html/" target="_blank" title="关于">关于</a></li>
+  <li><a href="/downloads.html/" target="_blank" title="下载">下载</a></li>
+  <li><a href="/maillist.html/" target="_blank" title="邮件列表">邮件列表</a></li>
+  <li><a href="/news/" target="_blank" title="新闻动态">新闻动态</a></li>
 </menu>
 <div class="menuheader">
   <a title="社区">社区</a>
 </div>
 <menu compact="true">
-  <li><a href="/docs/">文档</a></li>
-  <li><a href="/faq.html/">FAQ</a></li>
-  <li><a href="/articles.html/">文章</a></li>
-  <li><a href="/contribs.html/">贡献软件</a></li>
-  <li><a href="/forum/">论坛</a></li>
-  <li><a href="/bugs/">报告Bug</a></li>
-  <li><a href="/wiki/">Wiki</a></li>
+  <li><a href="/docs/" target="_blank" title="文档">文档</a></li>
+  <li><a href="/faq.html/" target="_blank" title="FAQ">FAQ</a></li>
+  <li><a href="/articles.html/" target="_blank" title="文章">文章</a></li>
+  <li><a href="/contribs.html/" target="_blank" title="贡献软件">贡献软件</a></li>
+  <li><a href="/forum/" target="_blank" title="论坛">论坛</a></li>
+  <li><a href="/bugs/" target="_blank" title="报告Bug">报告Bug</a></li>
+  <li><a href="/wiki/" target="_blank" title="Wiki">Wiki</a></li>
 </menu>
 <div class="menuheader">
   <a title="服务">服务</a>
 </div>
 <menu compact="true">
   <li><b>技术支持</b></li>
-  <li><a href="/consulting.html/">咨询</a></li>
-  <li><a href="/consulting.html/">解决方案</a></li>
-  <li><a href="/licensing.html/">使用协议</a></li>
-  <li><a href="/contacts.html/">联系我们</a></li>
+  <li><a href="/consulting.html/" target="_blank" title="咨询">咨询</a></li>
+  <li><a href="/consulting.html/" target="_blank" title="解决方案">解决方案</a></li>
+  <li><a href="/licensing.html/" target="_blank" title="使用协议">使用协议</a></li>
+  <li><a href="/contacts.html/" target="_blank" title="联系我们">联系我们</a></li>
 </menu>
 {% endblock %}
 
