--- a/trunk/pyerp/fnd/templates/layout.html
+++ b/trunk/pyerp/fnd/templates/layout.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>{% block title %}Pyerp{% endblock %}</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta content="pyerp" name="author"/>
 <link rel="icon" href="{{ fnd_media_prefix }}images/pyerp.ico" type="image/x-icon" />
 {% block css %}<link href="{{ fnd_media_prefix }}style/style.css" type="text/css" rel="stylesheet"/>{% endblock %}
