--- a/pyerp/fnd/templates/pub/index/index.html
+++ b/pyerp/fnd/templates/pub/index/index.html
@@ -41,7 +41,7 @@
 {% block body %}
 
   <div class="content_main">
-    <h3>Pyerp {% trans 'Arabic' %}</h3>
+    <h3>Pyerp {% trans 'Arabic' %} {% trans u'Application Developer' %}</h3>
     <div class="content">
 
 <p>　　Pyerp是基于Python语言，Django框架开发的一套ERP应用系统。</p>
