--- a/trunk/pyerp/fnd/templates/layout.html
+++ b/trunk/pyerp/fnd/templates/layout.html
@@ -133,7 +133,7 @@ $(window).resize(function() {
 {% if fnd_global.user.is_authenticated %}
           <td><a title="修改密码" href="{{ fnd_user_site_prefix }}changepwd/" class="x2v">修改密码</a></td>
           <td class="x4" >&nbsp;|&nbsp;</td>
-          <td><a title="工作环境" href="{{ fnd_user_site_prefix }}env/" class="x2v">工作环境</a></td>
+          <td><a title="偏好设定" href="{{ fnd_user_site_prefix }}prefs/" class="x2v">偏好设定</a></td>
           <td class="x4">&nbsp;|&nbsp;</td>
           <td><a target="_blank" title="帮助" href="{{ fnd_user_site_prefix }}help/{{ fnd_global.function.id }}/" class="x2v">帮助</a></td>
           <td class="x4">&nbsp;|&nbsp;</td>
